// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag should have a link 1`] = `
<scale-tag href="#">
  <mock:shadow-root>
    <style>
      .tag-0-0-7 {
  display: inline-flex;
  outline: none;
  padding: 0 10px;
  text-align: center;
  transition: all 0.15s ease-in-out;
  align-items: center;
  white-space: nowrap;
  border-radius: 4px;
  vertical-align: baseline;
  justify-content: center;
  font-size: 1rem;
  line-height: 1.5;
  background: #262626;
  color: #FFF;
  --icon-color: #FFF;
  font-weight: 700;
}
.tag-0-0-7 scale-icon {
  margin-left: 2px;
}
.tag-0-0-7:not(.tag--disabled-0-0-12) {}
.tag-0-0-7:not(.tag--disabled-0-0-12) scale-icon {}
.tag-0-0-7:not(.tag--disabled-0-0-12) scale-icon:hover {
  --icon-color: #CB0068;
}
.tag--dismissable-0-0-8 {
  padding-right: 0;
}
.tag--dismissable-0-0-8 scale-icon {
  cursor: pointer;
}
.tag--dismissable-0-0-8 scale-icon svg {
  outline: none;
  border-radius: 4px;
}
.tag--dismissable-0-0-8 scale-icon svg:hover {
  background: black;
}
.tag--dismissable-0-0-8 scale-icon svg:focus {
  background: black;
  box-shadow: 0 0 0 2px #009DE0;
}
.tag--size-small-0-0-9 {
  padding: 0 8px;
  font-size: 0.75rem;
  line-height: 1.6;
}
.tag--size-small-0-0-9.tag--dismissable-0-0-8 {
  padding-right: 0;
}
.tag--variant-secondary-0-0-10 {
  background: #00739F;
}
.tag--variant-secondary-0-0-10.tag--disabled-0-0-12 {
  opacity: 0.5;
  background: #00739F;
  color: #FFF;
  --icon-color: #FFF;
}
.tag--link-0-0-11 {
  text-decoration: none;
}
.tag--link-0-0-11:focus {
  box-shadow: 0 0 0 2px #009DE0;
}
.tag--link-0-0-11.tag--variant-secondary-0-0-10 {
  background: #00739F;
}
.tag--link-0-0-11.tag--variant-secondary-0-0-10:hover {
  background: #00739F;
}
.tag--link-0-0-11.tag--variant-secondary-0-0-10:focus {
  background: #00739F;
}
.tag--disabled-0-0-12 {
  color: #A4A4A4;
  cursor: not-allowed;
  --icon-color: #A4A4A4;
  background: #D0D0D0;
}
    </style>
    <a class="tag--link-0-0-11 tag-0-0-7" href="#" target="_self">
      <slot></slot>
    </a>
  </mock:shadow-root>
  Label
</scale-tag>
`;

exports[`Tag should match snapshot 1`] = `
<scale-tag>
  <mock:shadow-root>
    <style>
      .tag-0-0-7 {
  display: inline-flex;
  outline: none;
  padding: 0 10px;
  text-align: center;
  transition: all 0.15s ease-in-out;
  align-items: center;
  white-space: nowrap;
  border-radius: 4px;
  vertical-align: baseline;
  justify-content: center;
  font-size: 1rem;
  line-height: 1.5;
  background: #262626;
  color: #FFF;
  --icon-color: #FFF;
  font-weight: 700;
}
.tag-0-0-7 scale-icon {
  margin-left: 2px;
}
.tag-0-0-7:not(.tag--disabled-0-0-12) {}
.tag-0-0-7:not(.tag--disabled-0-0-12) scale-icon {}
.tag-0-0-7:not(.tag--disabled-0-0-12) scale-icon:hover {
  --icon-color: #CB0068;
}
.tag--dismissable-0-0-8 {
  padding-right: 0;
}
.tag--dismissable-0-0-8 scale-icon {
  cursor: pointer;
}
.tag--dismissable-0-0-8 scale-icon svg {
  outline: none;
  border-radius: 4px;
}
.tag--dismissable-0-0-8 scale-icon svg:hover {
  background: black;
}
.tag--dismissable-0-0-8 scale-icon svg:focus {
  background: black;
  box-shadow: 0 0 0 2px #009DE0;
}
.tag--size-small-0-0-9 {
  padding: 0 8px;
  font-size: 0.75rem;
  line-height: 1.6;
}
.tag--size-small-0-0-9.tag--dismissable-0-0-8 {
  padding-right: 0;
}
.tag--variant-secondary-0-0-10 {
  background: #00739F;
}
.tag--variant-secondary-0-0-10.tag--disabled-0-0-12 {
  opacity: 0.5;
  background: #00739F;
  color: #FFF;
  --icon-color: #FFF;
}
.tag--link-0-0-11 {
  text-decoration: none;
}
.tag--link-0-0-11:focus {
  box-shadow: 0 0 0 2px #009DE0;
}
.tag--link-0-0-11.tag--variant-secondary-0-0-10 {
  background: #00739F;
}
.tag--link-0-0-11.tag--variant-secondary-0-0-10:hover {
  background: #00739F;
}
.tag--link-0-0-11.tag--variant-secondary-0-0-10:focus {
  background: #00739F;
}
.tag--disabled-0-0-12 {
  color: #A4A4A4;
  cursor: not-allowed;
  --icon-color: #A4A4A4;
  background: #D0D0D0;
}
    </style>
    <span class="tag-0-0-7">
      <slot></slot>
    </span>
  </mock:shadow-root>
  Label
</scale-tag>
`;
